<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start"
        android:layout_width="185dp"
        android:layout_height="55dp"
        android:layout_marginBottom="35dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/start"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:focusable="true" />

    <Button
        android:id="@+id/del"
        android:layout_width="185dp"
        android:layout_height="55dp"
        android:layout_marginBottom="109dp"
        android:text="@string/del"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <Button
        android:id="@+id/add"
        android:layout_width="185dp"
        android:layout_height="55dp"
        android:layout_marginBottom="35dp"
        android:onClick="onClick"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@+id/del"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="500dp"
        android:layout_height="300dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="239dp"
            android:layout_height="239dp"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="10dp"
            android:scaleType="fitStart"
            android:visibility="visible"
            android:src = "@drawable/img"
            android:contentDescription="@string/todo" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>